<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/user_photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="false"
                    android:layout_centerHorizontal="true"

                    android:src="@mipmap/ic_launcher_round" />

                <ImageButton
                    android:id="@+id/user_photo_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/user_photo"
                    android:layout_gravity="bottom"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentRight="true"
                    android:background="#ffffff"
                    android:scaleType="fitCenter"
                    android:src="@android:drawable/ic_menu_camera" />

                <EditText
                    android:id="@+id/edit_user_name"
                    android:layout_below="@+id/user_photo_button"
                    android:layout_gravity="bottom"
                    android:hint="@string/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/edit_user_password"
                    android:layout_below="@+id/edit_user_name"
                    android:layout_gravity="bottom"
                    android:hint="@string/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/edit_user_email"
                    android:layout_below="@+id/edit_user_password"
                    android:layout_gravity="bottom"
                    android:hint="@string/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/edit_user_phone"
                    android:layout_below="@+id/edit_user_email"
                    android:layout_gravity="bottom"
                    android:hint="@string/user_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/edit_user_location"
                    android:layout_below="@+id/edit_user_phone"
                    android:layout_gravity="bottom"
                    android:hint="@string/user_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/edit_user_bio"
                    android:layout_below="@+id/edit_user_location"
                    android:layout_gravity="bottom"
                    android:hint="@string/user_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/edit_user_bio"
                    android:layout_gravity="bottom"
                    android:padding="8dp">

                    <Button
                        android:id="@+id/save_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/save_button_label" />

                </RelativeLayout>

            </RelativeLayout>

        </ScrollView>
    </android.support.v7.widget.CardView>




</LinearLayout>